# chace

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  load_keys_example.sh
.github/workflows/: release.yml
src/: main.rs
src/ai/: backend.rs  gemini.rs  groq_gpt_oss.rs  helpers.rs  mod.rs
src/languages/: helpers.rs  js_backend.rs  jsx_backend.rs  language_standard.rs  mod.rs  rust_backend.rs  ts_backend.rs  tsx_backend.rs
tests/: README.md  socket_integration_tests.rs
