[package]
name = "chace"
version = "0.1.0"
edition = "2024"
description = "CHamal's AutoComplete Engine"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
tree-sitter = "0.26.2"
tree-sitter-rust = "0.24.0"
